Point density textures. When using vertices as source, the viewport preview render does not update when adding a modifier or changing modifier settings. #46405

Closed
opened 2015-10-07 11:25:29 +02:00 by Gottfried Hofmann · 6 comments

System Information
Ubuntu 15.05 x64 Geforce GTX 580

Blender Version
Broken: f456c8d

Short description of error
When using vertices as input for point density and adding a modifer or changing settings of a modifier, the viewport does not update. Also when using subsurf modifier, it always uses the number of subdivisions in "render", even when in viewport preview render. See attached video: bug.pd.vertices.subsurf.mp4

Exact steps for others to reproduce the error
Open attached .blend - go to rendered preview mode - change subsurf settings - remove and re-add the modifier. Nothing happens. When going out of rendered view and back in, the render amount of subdivisions is used, not the view one.

**System Information** Ubuntu 15.05 x64 Geforce GTX 580 **Blender Version** Broken: f456c8d **Short description of error** When using vertices as input for point density and adding a modifer or changing settings of a modifier, the viewport does not update. Also when using subsurf modifier, it always uses the number of subdivisions in "render", even when in viewport preview render. See attached video: [bug.pd.vertices.subsurf.mp4](https://archive.blender.org/developer/F243075/bug.pd.vertices.subsurf.mp4) **Exact steps for others to reproduce the error** Open attached .blend - go to rendered preview mode - change subsurf settings - remove and re-add the modifier. Nothing happens. When going out of rendered view and back in, the render amount of subdivisions is used, not the view one.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @GottfriedHofmann

Added subscriber: @GottfriedHofmann

pd.vertices.subsurf.bug.blend here is the file.

[pd.vertices.subsurf.bug.blend](https://archive.blender.org/developer/F243076/pd.vertices.subsurf.bug.blend) here is the file.
Sergey Sharybin self-assigned this 2015-10-08 07:45:18 +02:00

This issue was referenced by 8d108db184

This issue was referenced by 8d108db18497486c7c75bd15cd153035c4472304

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by blender/cycles@b0483b14d9

This issue was referenced by blender/cycles@b0483b14d9ef9f3fc741d66942cab7485fcc2cf0
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46405
No description provided.