Fix T46405: Cycles point density missing update when modifying source object